--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     font-family: Didot;
     src: url(../fonts/Didot.otf);
 }
+
 body {
     font-family: 'Open Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -11,6 +12,7 @@ body {
     *zoom: 1;
     position: relative;
     width: 100%;
+    overflow: hidden;
 }
 
 header {
@@ -29,7 +31,7 @@ footer {
     margin-top: 5%;
 }
 
-article, .lang {
+article, .lang, #home {
     color: #a39468;
 }
 
@@ -46,15 +48,16 @@ article, .lang {
 }
 
 menu {
+    right: 0;
+    top: 0;
     width: 92%;
     padding: 4%;
     margin-bottom: 20px;
 }
 
 #sidebar-toggle {
-    right: 0;
-    top: 0;
-    z-index: 5000;
+    float: left;
+    margin-top: 5px;
 }
 
 #sidebar-toggle .bar {
@@ -69,8 +72,62 @@ menu {
     margin-bottom: 0;
 }
 
+#home {
+    float: right;
+    font-size: 1.5em;
+    font-weight: lighter;
+}
+
 img {
     display: block;
     width: 100%;
     margin: 5% auto;
+}
+
+.mobile-navigation {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    height: 200%;
+    width: 100%;
+    -webkit-transition-property: display;
+    -moz-transition-property: display;
+    -o-transition-property: display;
+    transition-property: display;
+    -webkit-transition-duration: 0.5s;
+    -moz-transition-duration: 0.5s;
+    -o-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+}
+
+.mobile-navigation table {
+    width: 100%;
+    border-spacing: 0;
+}
+#end {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+}
+
+.mobile-navigation td {
+    position: relative;
+    right: 0;
+    /*height: 6%;*/
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    line-height: 2em;
+    overflow: hidden;
+    font-size: 1.3em;
+    background-color: #fff;
+}
+
+.mobile-navigation td a {
+    letter-spacing: 2px;
+    font-weight: lighter;
+    color: #a39468;
+    text-decoration: none;
+    display: block;
 }
