--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ body {
     overflow: hidden;
 }
 
+a, a:focus, a:active{
+    text-decoration: none;
+    background-color: none;
+}
+
 header {
     font-size: 1.2em;
 }
@@ -105,6 +110,7 @@ img {
     width: 100%;
     border-spacing: 0;
 }
+
 #end {
     width: 100%;
     height: 100%;
@@ -130,4 +136,5 @@ img {
     color: #a39468;
     text-decoration: none;
     display: block;
+    margin-top: 20px;
 }
