--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
 a, a:focus, a:active{
     text-decoration: none;
     background-color: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 header {
