--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ img {
     border-bottom: 1px solid #a39468;
     margin: 20px 0 0 10px;
     width: 120px;
-    /*height: 40px;*/
+    border-radius: 0;
     font-size: 16px;
     line-height: 16px;
 }
