--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     overflow: hidden;
 }
 
-a, a:focus, a:active{
+a, a:focus, a:active, input {
     text-decoration: none;
     background-color: none;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
