--- a/css/style.css
+++ b/css/style.css
@@ -175,10 +175,52 @@ article {
     line-height: 1.3em;
 }
 
-article span {
-    color: #555;
+article span, p span {
+    color: #666;
 }
 
 .fa-angle-right {
     float: right;
+}
+
+p {
+    width: 84%;
+    margin: 4%;
+    line-height: 1.3em;
+}
+
+p a {
+    border-left: 1px solid #000;
+    padding: 0 5%;
+}
+
+#share {
+    width: 100%;
+    margin: 15% 0;
+    text-align: center;
+    color: blue;
+    letter-spacing: 2px;
+    font-size: .8em;
+}
+
+.share-buttons {
+    display: none;
+    width: 180px;
+    margin: 15% auto;
+}
+
+.share-buttons span { 
+    width: 30px;
+    height: 30px;
+    float: left;
+    text-align: center;
+    line-height: 30px;
+    border: 2px solid #a39468;
+    border-radius: 50% 50%;
+    margin: 5px;
+    font-size: 1em;
+} 
+
+#bottom {
+    height: 100px;
 }
