--- a/css/style.css
+++ b/css/style.css
@@ -36,11 +36,11 @@ strong {
 
 header {
     font-size: 1.2em;
+    font-family: 'Didot', serif;
 }
 
 header, h3 {
     padding: 2%;
-    font-family: 'Didot', serif;
     width: 96%;
     text-align: center;
 }
@@ -52,6 +52,11 @@ footer {
 
 h3, .lang, .fa {
     color: #a39468;
+}
+
+h3 {
+    font-size: .9em;
+    line-height: 1.3em;
 }
 
 .fa {
@@ -223,4 +228,8 @@ p a {
 
 #bottom {
     height: 100px;
+}
+
+.contact-page {
+    display: none;
 }
