--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     width: 100%;
 }
 
-a, a:focus, a:active, input {
+a, a:focus, a:active, input, #share, #share:focus, #share:active {
     text-decoration: none;
     background-color: none;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
