--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+@import url(http://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
 @font-face {
-    font-family: Didot;
+    font-family: 'Didot';
     src: url(../fonts/Didot.otf);
 }
 
@@ -201,17 +202,22 @@ p a {
 
 #share {
     width: 100%;
-    margin: 15% 0;
+    margin: 10% 0;
     text-align: center;
     color: blue;
     letter-spacing: 2px;
     font-size: .8em;
 }
 
+#phone {
+    color: blue;
+    letter-spacing: 1.5px;
+}
+
 .share-buttons {
     display: none;
     width: 184px;
-    margin: 15% auto;
+    margin: 10% auto;
 }
 
 .share-buttons span { 
@@ -230,6 +236,6 @@ p a {
     height: 100px;
 }
 
-.contact-page {
+.contact-page, .gallery-page {
     display: none;
 }
